fix(contract): Sonar - JSON error key constant, cause message, stream toList(); add UserClientTest
Made-with: Cursor